app/assets/stylesheets/regions.css.scss
// Place all the styles related to the regions controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

// colors
$water: rgba(34, 167, 240, 1.0);

.regions {
  &.map {
    background: $water;
    border-radius: 0 0 10px 10px;
    text-align: center;
    .map-bg {
      width: 600px;
      height: 600px;
      text-align: center;
      color: white;
      position: relative;
      padding: 20%;
      border-radius: 0 0 10px 10px;
      overflow: visible;
      margin: 0 auto;
      .map-bg-svg {
        width: 400px;
      }
      .Speyside {
        position: absolute;
        top: 112px;
        right: 98px;
        z-index: 700;
        .region-img {
          width: 195px;
          .svg {
            fill: #4B77BE;
            transition: all 0.5s linear;
            &:hover {
              fill: darken(#4B77BE, 10%);
            }
          }
        }
      }
    }
    .Highland {
      position: absolute;
      top: -10px;
      left: 180px;
      z-index: 0;
      .region-img {
        width: 333px;
        .svg {
          fill: #26A65B;
          transition: all 0.5s linear;
            &:hover {
              fill: darken(#26A65B, 10%);
            }
        }
      }
      .overlay {
        z-index: 9999;
      }
    }
    .Lowland {
      position: absolute;
      top: 279px;
      right: 100px;
      .region-img {
        width: 240px;
        z-index: 100;
        .svg {
          fill: #34495E;
          transition: all 0.5s linear;
            &:hover {
              fill: darken(#34495E, 10%);
            }
        }
      }
    }
    .Campbeltown {
      position: absolute;
      top: 400px;
      left: 218px;
      z-index: 50;
      .region-img {
        width: 20px;

        .svg {
          fill: #3A539B;
          transition: all 0.5s linear;
            &:hover {
              fill: darken(#3A539B, 10%);
            }
        }
      }
    }
    .Islay {
      position: absolute;
      top: 340px;
      left: 175px;
      z-index: 100;
      .region-img {
        width: 34px;

        .svg {
          fill: #674172;
          transition: all 0.5s linear;
            &:hover {
              fill: darken(#674172, 10%);
            }
        }
      }
    }
    .Islands {
      position: absolute;
      top: 21px;
      left: 100px;
      z-index: 20;
      h3 {
        margin-top: 0;
      }
      .region-img {
        width: 182px;
        .svg {
          fill: #F5AB35;
          transition: all 0.5s linear;
            &:hover {
              fill: darken(#F5AB35, 10%);
            }
        }
      }

    }
    .overlay {
      width: 400px;
      position: absolute;
      top: 10%;
      left: -30px;
      background: white;
      color: #666;
      padding: 1em;
      border-radius: 4px;
      text-align: left;
      .text {
        float: left;
        width: 75%;
      }
      .region-img.small {
        width: 20%;
        float: right;
      }
    }

  }

}

